[package]
name = "megalodon"
version = "0.1.0"
authors = ["Robin Mattheussen <robin.mattheussen@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "1.1.1"
actix-web = "2.0.0"
tokio = { version = "0.2.21", features = ["macros", "rt-threaded"] }
